--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 <h1>reddit</h1>
-  <div id = 'frontpage'></div>
+  <div id = 'header'>
+    Logo
+  </div>
+  <div id="navBar">
+    <div id="random">Random</div>
+    <div id="myBoards">My Boards</div>
+    <div id="getApp">Get The App</div>
+  </div>
+  <div id="homepage">Homepage</div>
   <script src = 'js/app.js'></script>
 </body>
 </html>
