vertical div class with pictures loaded

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,12 @@
     <div id="myBoards">My Boards</div>
     <div id="getApp">Get The App</div>
   </div>
-  <div id="homepage">Homepage</div>
+  <div id="homepage">
+    <div class="content" ></div>
+    <div class="content" ></div>
+    <div class="content" ></div>
+    <div class="content" ></div>
+  </div>
   <script src = 'js/app.js'></script>
 </body>
 </html>
