centered content in white divs, added author to data

--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,20 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1>reddit</h1>
   <div id = 'header'>
-    Logo
+  <h1>reddit</h1>
+  <div id="subreddit"></div>
+  </div>
+  <div id="search">
+   <input id="searchBar" type="text" placeholder="search"/>
+  <button id="searchButton">search</button>
   </div>
   <div id="navBar">
-    <div id="random">Random</div>
-    <div id="myBoards">My Boards</div>
-    <div id="getApp">Get The App</div>
+    <button id="random" class =' navButton'>Random</button>
+    <button id="myBoards" class = 'navButton'>My Boards</button>
+    <button id="getApp" class = 'navButton'>Get The App</button>
   </div>
-  <div id="homepage">
-    <div class="content" ></div>
-    <div class="content" ></div>
-    <div class="content" ></div>
-    <div class="content" ></div>
-  </div>
+  <div id="homepage">  </div>
   <script src = 'js/app.js'></script>
 </body>
 </html>
