--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <button id="getApp" class = 'navButton'>Get The App</button>
   </div>
   <div id="homepage">  </div>
+  <div id="footer"></div>
   <script src = 'js/app.js'></script>
 </body>
 </html>
